//paicode use a protobuf 3 defination as the persistent data format 

syntax = "proto3";

package ccprotos;
import "google/protobuf/timestamp.proto";

message FuncRecord{
	bytes     noncekey = 1;
	bool      isSend = 2;	
}

message AccountData {
	bytes	  balance = 1; //the amount of user owned token
	FuncRecord lastFund = 2;
}

message NonceData{
	string txid = 1;
	bytes  amount = 2;
    FuncRecord  fromLast = 3;
	FuncRecord  toLast = 4;
	google.protobuf.Timestamp nonceTime = 6;
}

message TokenGlobalData{
	bytes totalTokens = 10;
	bytes unassignedTokens = 11;
	 
}
